Atualizei os diretos CSS & JS

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cronometro | On-line</title>
-    <link rel="stylesheet" href="/assets/style.css"/>
+    <link rel="stylesheet" href="./assets/style.css"/>
 </head>
 <body>
     <div class="wrapper">
-        <h1>Stopwatch</h1>
+        <h1>Maque seu tempo!</h1>
         <h2>Cronometro em JavaScript!</h2>
         <p><span id="seconds">00</span>:<span id="tens">00</span></p>
         <button id="button-start">Start</button>
         <button id="button-stop">Stop</button>
         <button id="button-reset">Reset</button>
     </div>
-    <script src="/assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
