--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Maque seu tempo!</h1>
-        <h2>Cronometro em JavaScript!</h2>
+        <h1>Maque seu tempo com o</h1>
+        <h2>Cronometro em HTML/CSS/JavaScript!</h2>
         <p><span id="seconds">00</span>:<span id="tens">00</span></p>
         <button id="button-start">Start</button>
         <button id="button-stop">Stop</button>
