--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Maque seu tempo com o</h1>
-        <h2>Cronometro em HTML/CSS/JavaScript!</h2>
+        <h1>Maque seu tempo com o<br>Cronometro em HTML/CSS/JavaScript!</h1>
         <p><span id="seconds">00</span>:<span id="tens">00</span></p>
-        <button id="button-start">Start</button>
-        <button id="button-stop">Stop</button>
-        <button id="button-reset">Reset</button>
+        <button id="button-start">Começar</button>
+        <button id="button-stop">Parar</button>
+        <button id="button-reset">Zerar</button>
     </div>
     <script src="./assets/script.js"></script>
 </body>
